# js/summer/src/controllers/credit/credit-adapter.js
@@ -1,0 +1,12 @@
+const mappingFieldsCredit = {
+	crop: "SAFRA",
+	group: "GRUPO_ECONOMICO",
+}
+
+const mappingDBFieldsCredit = {
+	GRUPO_ECONOMICO: 'group', 
+	MOEDA: 'currency', 
+	SALDO_LIMITE_ATUAL: 'actualLimit'
+}
+
+export {mappingFieldsCredit , mappingDBFieldsCredit}
