# js/summer/src/swagger.json
@@ -19,12 +19,14 @@
 			"description": "Production server"
 		}
 	],
-	"paths" : {
+	"paths": {
 		"/orders": {
 			"get": {
 				"summary": "Get all orders",
 				"description": "Get the sales orders from the ERP.",
-				"tags": ["Orders"],
+				"tags": [
+					"Orders"
+				],
 				"parameters": [
 					{
 						"name": "pageSize",
@@ -109,7 +111,9 @@
 			"get": {
 				"summary": "Get all orders",
 				"description": "Get the sales orders from the ERP.",
-				"tags": ["Orders"],
+				"tags": [
+					"Orders"
+				],
 				"parameters": [
 					{
 						"name": "pageSize",
@@ -194,7 +198,9 @@
 			"get": {
 				"summary": "Get a order by ID",
 				"description": "Get a sales order from the ERP by ID.",
-				"tags": ["Orders"],
+				"tags": [
+					"Orders"
+				],
 				"parameters": [
 					{
 						"name": "id",
@@ -218,10 +224,7 @@
 						"content": {
 							"application/json": {
 								"schema": {
-									"type": "array",
-									"items": {
-										"$ref": "#/components/schemas/OrderNoItems"
-									}
+									"$ref": "#/components/schemas/OrderNoItems"
 								}
 							}
 						}
@@ -233,7 +236,9 @@
 			"get": {
 				"summary": "Get a order by ID with Items",
 				"description": "Get a sales order from the ERP by ID.",
-				"tags": ["Orders"],
+				"tags": [
+					"Orders"
+				],
 				"parameters": [
 					{
 						"name": "id",
@@ -257,10 +262,113 @@
 						"content": {
 							"application/json": {
 								"schema": {
+									"$ref": "#/components/schemas/Order"
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/credit": {
+			"get": {
+				"summary": "Get credit limits",
+				"description": "Get credit limits of all the economic groups",
+				"tags": [
+					"Credit"
+				],
+				"parameters": [
+					{
+						"name": "pageSize",
+						"in": "query",
+						"description": "The number of registries to return",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "pageNumber",
+						"in": "query",
+						"description": "Control of pagination on search",
+						"required": false,
+						"schema": {
+							"type": "integer",
+							"minimum": 1
+						}
+					},
+					{
+						"name": "group",
+						"in": "query",
+						"description": "Filter ordelimit credits  by ID of economic group",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					},
+					{
+						"name": "crop",
+						"in": "query",
+						"description": "Filter a limit of a specific crop. (Format: YYYY/YYYY). Default is the current crop.",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "A list of limit credit according to the filters parameters",
+						"content": {
+							"application/json": {
+								"schema": {
 									"type": "array",
 									"items": {
-										"$ref": "#/components/schemas/Order"
+										"$ref": "#/components/schemas/CreditLimit"
 									}
+								}
+							}
+						}
+					}
+				}
+			}
+		},
+		"/credit/:group": {
+			"get": {
+				"summary": "Credit limit of a group",
+				"description": "Get credit limit of a specific economic group",
+				"tags": [
+					"Credit"
+				],
+				"parameters": [
+					{
+						"name": "crop",
+						"in": "query",
+						"description": "Filter a limit of a specific crop. (Format: YYYY/YYYY). Default is the current crop.",
+						"required": false,
+						"schema": {
+							"type": "string"
+						}
+					}
+				],
+				"security": [
+					{
+						"bearerAuth": []
+					}
+				],
+				"responses": {
+					"200": {
+						"description": "The limit credit according to the economic group informed",
+						"content": {
+							"application/json": {
+								"schema": {
+									"$ref": "#/components/schemas/CreditLimit"
 								}
 							}
 						}
@@ -272,7 +380,9 @@
 			"post": {
 				"summary": "Login for testing",
 				"description": "Authenticate user for testing purposes.",
-				"tags": ["Authentication"],
+				"tags": [
+					"Authentication"
+				],
 				"requestBody": {
 					"required": true,
 					"content": {
@@ -289,7 +399,10 @@
 										"description": "User's password"
 									}
 								},
-								"required": ["username", "password"]
+								"required": [
+									"username",
+									"password"
+								]
 							}
 						}
 					}
@@ -320,7 +433,7 @@
 	},
 	"components": {
 		"schemas": {
-			"OrderItem":{
+			"OrderItem": {
 				"type": "object",
 				"properties": {
 					"product": {
@@ -349,7 +462,7 @@
 					"customerStore": {
 						"type": "string"
 					},
-					"items":  {
+					"items": {
 						"type": "array",
 						"items": {
 							"$ref": "#/components/schemas/OrderItem"
@@ -371,6 +484,20 @@
 					},
 					"customerStore": {
 						"type": "string"
+					}
+				}
+			},
+			"CreditLimit": {
+				"type": "object",
+				"properties": {
+					"group": {
+						"type": "string"
+					},
+					"currency": {
+						"type": "string"
+					},
+					"actualLimit": {
+						"type": "number"
 					}
 				}
 			}
